Hoan thanh man hinh danh sach user, xoa user

--- a/src/Pelo.Web/wwwroot/css/style.css
+++ b/src/Pelo.Web/wwwroot/css/style.css
@@ -103,3 +103,14 @@
     top: 5px;
     width: 7px;
 }
+
+.table thead th {
+    text-align:center;
+}
+td.datatable-cell-center {
+    vertical-align:middle;
+    padding:0 !important;
+}
+tr.inactive {
+    background-color:#c2c2c2;
+}
