Insert update user

--- a/src/Pelo.Web/Views/Shared/_Menu.cshtml
+++ b/src/Pelo.Web/Views/Shared/_Menu.cshtml
@@ -330,7 +330,7 @@
                     <li id="mnuUser">
                         <a href="@Url.Action("Index",
                                  "User")">
-                            Danh sách người dùng
+                            Danh sách nhân viên
                         </a>
                     </li>
                     <li id="mnuRole">
