--- a/src/Pelo.Web/Views/User/Index.cshtml
+++ b/src/Pelo.Web/Views/User/Index.cshtml
@@ -4,7 +4,7 @@
 @model object
 
 @{
-    ViewBag.Title = "Danh sách người dùng";
+    ViewBag.Title = "Danh sách nhân viên";
     Layout = "_Layout";
 }
 
@@ -12,7 +12,7 @@
     <div class="card-body" id="accordion">
         <h4 class="card-title">
             <a data-toggle="collapse" data-parent="#accordion" href="#collapse1">
-                Danh sách người dùng
+                Danh sách nhân viên
             </a>
         </h4>
         <div class="row panel-collapse collapse in" id="collapse1">
@@ -24,7 +24,7 @@
             </div>
             <div class="col-md-6">
                 <div class="form-group mb-0">
-                    <input type="text" class="form-control" id="txtName" placeholder="Tên nhân viên">
+                    <input type="text" class="form-control" id="txtName" placeholder="Tên nhân viên - Tên đăng nhập">
                     <i class="form-group__bar"></i>
                 </div>
             </div>
