--- a/src/Pelo.Web/Views/Shared/_Layout.cshtml
+++ b/src/Pelo.Web/Views/Shared/_Layout.cshtml
@@ -11,6 +11,7 @@
     <link rel="stylesheet" href="~/vendors/jquery-scrollbar/jquery.scrollbar.css">
     <link rel="stylesheet" href="~/vendors/sweetalert2/sweetalert2.min.css">
     <link rel="stylesheet" href="~/vendors/select2/css/select2.min.css">
+    @RenderSection("cssPlugin",false)
 
     <!-- App styles -->
     <link rel="stylesheet" href="~/css/app.min.css">
