Add customer, get customer by phone

--- a/src/Pelo.Web/Views/Crm/Index.cshtml
+++ b/src/Pelo.Web/Views/Crm/Index.cshtml
@@ -344,7 +344,7 @@
                 </thead>
             </table>
         </div>
-        <button class="btn btn-success btn--action" onclick="window.location.href='/Crm/Add'"><i class="zmdi zmdi-plus"></i></button>
+        <button class="btn btn-success btn--action" onclick="window.location.href='/Customer/FindByPhoneNumber?nextAction=Crm'"><i class="zmdi zmdi-plus"></i></button>
     </div>
 </div>
 
