--- a/src/Pelo.Web/Views/Customer/Add.cshtml
+++ b/src/Pelo.Web/Views/Customer/Add.cshtml
@@ -1,4 +1,5 @@
-﻿@using Pelo.Common.Dtos.CustomerGroup
+﻿@using Newtonsoft.Json
+@using Pelo.Common.Dtos.CustomerGroup
 @model Pelo.Web.Models.Customer.InsertCustomerModel
 
 @{
@@ -147,5 +148,8 @@
 </div>
 
 @section js{
+    <script>
+        var model=@Html.Raw(JsonConvert.SerializeObject(Model));
+    </script>
     <script src="~/js/pages/customer/add.js"></script>
 }
