--- a/src/Pelo.Web/Views/Customer/Index.cshtml
+++ b/src/Pelo.Web/Views/Customer/Index.cshtml
@@ -132,7 +132,7 @@
                 </thead>
             </table>
         </div>
-        <button class="btn btn-success btn--action" onclick="window.location.href='/Customer/Add?nextAction=Customer'"><i class="zmdi zmdi-plus"></i></button>
+        <button class="btn btn-success btn--action" onclick="window.location.href='/Customer/Add'"><i class="zmdi zmdi-plus"></i></button>
     </div>
 </div>
 
