--- a/src/Pelo.Web/Views/Shared/_Header.cshtml
+++ b/src/Pelo.Web/Views/Shared/_Header.cshtml
@@ -11,7 +11,7 @@
         <h1>
             <a href="@Url.Action("Index",
                              "Home")">
-                <img style="max-width:40px;padding-right:10px" src="~/img/sidebar/logo.png"/>Pelo.vn
+                Pelo.vn
             </a>
         </h1>
     </div>
