--- a/src/Pelo.Web/Views/Customer/Detail.cshtml
+++ b/src/Pelo.Web/Views/Customer/Detail.cshtml
@@ -1,7 +1,7 @@
 ﻿@using Newtonsoft.Json
 @using Pelo.Common.Dtos.CustomerGroup
 @using Pelo.Common.Extensions
-@model Pelo.Common.Dtos.Customer.GetCustomerDetailResponse
+@model Pelo.Web.Models.Customer.CustomerDetailModel
 
 @{
     ViewBag.Title = "Thông tin chi tiết khách hàng";
@@ -40,6 +40,7 @@
         <form>
             @Html.ValidationSummary()
             @Html.HiddenFor(c => c.Id)
+            @Html.HiddenFor(c=>c.NextAction)
 
             <div class="form-row">
                 <div class="col-md-6">
@@ -51,7 +52,11 @@
                 <div class="col-md-6">
                     <div class="row">
                         <label class="col-sm-3 label-title col-form-label"><strong>Người tạo: </strong></label>
-                        <a href="tel:@Model.UserCreatedPhone" class="col-sm-9 label-content col-form-label">@Model.UserCreated</a>
+                        @{
+                            if(!string.IsNullOrEmpty(Model.UserCreated)) {
+                                <a href="tel:@Model.UserCreatedPhone" class="col-sm-9 label-content col-form-label">@Model.UserCreated</a>
+                            }
+                        }
                     </div>
                 </div>
             </div>
@@ -141,13 +146,13 @@
                         <div class="col-md-4">
                             <div class="row">
                                 <label class="col-sm-3 label-title col-form-label"><strong>@Model.DistrictType: </strong></label>
-                                <label class="col-sm-3 label-title col-form-label">@Model.District</label>
+                                <label class="col-sm-3 label-content col-form-label">@Model.District</label>
                             </div>
                         </div>
                         <div class="col-md-4">
                             <div class="row">
                                 <label class="col-sm-3 label-title col-form-label"><strong>@Model.WardType: </strong></label>
-                                <label class="col-sm-3 label-title col-form-label">@Model.Ward</label>
+                                <label class="col-sm-3 label-content col-form-label">@Model.Ward</label>
                             </div>
                         </div>
                     </div>
@@ -163,7 +168,7 @@
                 <div class="col-md-6">
                     <div class="row">
                         <label class="col-sm-3 label-title col-form-label"><strong>Mức độ thân thiết: </strong></label>
-                        <label class="col-sm-3 label-title col-form-label">@Model.CustomerVip</label>
+                        <label class="col-sm-3 label-content col-form-label">@Model.CustomerVip</label>
                     </div>
                 </div>
             </div>
@@ -223,13 +228,27 @@
                     </div>
                 </div>
                 <br />
-                <div class="col-md-12">
-                    <a href="@Url.Action("Edit",
-                                 Model.Id)" class="btn btn-primary" style="color:white;">
-                        <i class="zmdi zmdi-edit"></i>
-                        Sửa thông tin
-                    </a>
-                </div>
+                @{
+                    if(string.IsNullOrEmpty(Model.NextAction)) {
+                        <div class="col-md-12">
+                            <a href="@Url.Action("Edit",
+                                                 Model.Id)" class="btn btn-primary" style="color:white;">
+                                <i class="zmdi zmdi-edit"></i>
+                                Sửa thông tin
+                            </a>
+                        </div>        
+                    }
+                    else
+                    {
+                        <div class="col-md-12">
+                            <a href="/@Model.NextAction/Add?phone=@Model.Phone" class="btn btn-primary" style="color:white;">
+                                <i class="zmdi zmdi-check"></i>
+                                Tiếp tục
+                            </a>
+                        </div>
+                    }
+                }
+                
                 <br />
                 <small class="form-text text-muted">* Cập nhật lần cuối ngày: @string.Format("{0:dd/MM/yyyy}", Model.DateUpdated)</small>
             </div>
