--- a/src/Pelo.Web/Views/Customer/Detail.cshtml
+++ b/src/Pelo.Web/Views/Customer/Detail.cshtml
@@ -40,7 +40,7 @@
         <form>
             @Html.ValidationSummary()
             @Html.HiddenFor(c => c.Id)
-            @Html.HiddenFor(c=>c.NextAction)
+            @Html.HiddenFor(c => c.NextAction)
 
             <div class="form-row">
                 <div class="col-md-6">
@@ -53,7 +53,8 @@
                     <div class="row">
                         <label class="col-sm-3 label-title col-form-label"><strong>Người tạo: </strong></label>
                         @{
-                            if(!string.IsNullOrEmpty(Model.UserCreated)) {
+                            if (!string.IsNullOrEmpty(Model.UserCreated))
+                            {
                                 <a href="tel:@Model.UserCreatedPhone" class="col-sm-9 label-content col-form-label">@Model.UserCreated</a>
                             }
                         }
@@ -229,14 +230,15 @@
                 </div>
                 <br />
                 @{
-                    if(string.IsNullOrEmpty(Model.NextAction)) {
+                    if (string.IsNullOrEmpty(Model.NextAction))
+                    {
                         <div class="col-md-12">
                             <a href="@Url.Action("Edit",
                                                  Model.Id)" class="btn btn-primary" style="color:white;">
                                 <i class="zmdi zmdi-edit"></i>
                                 Sửa thông tin
                             </a>
-                        </div>        
+                        </div>
                     }
                     else
                     {
@@ -248,36 +250,130 @@
                         </div>
                     }
                 }
-                
+
                 <br />
                 <small class="form-text text-muted">* Cập nhật lần cuối ngày: @string.Format("{0:dd/MM/yyyy}", Model.DateUpdated)</small>
             </div>
         </form>
         <h2 style="text-align:center;font-size:20px;" class="label-content">Lịch sử giao dịch của khách hàng</h2>
-    <a class="btn btn-primary collapsed title-history" data-toggle="collapse" href="#collapseExample" role="button" aria-expanded="false" aria-controls="collapseExample">
-        Đơn hàng (0)
-    </a>
-    <div class="mt-2 collapse" id="collapseExample" style="">
-        Anim pariatur cliche reprehenderit, enim eiusmod high life accusamus terry richardson ad squid. Nihil anim keffiyeh helvetica, craft beer labore wes anderson cred nesciunt sapiente ea proident.
-    </div>
-        <br />
-        <a class="btn btn-primary collapsed title-history" data-toggle="collapse" href="#collapseExample" role="button" aria-expanded="false" aria-controls="collapseExample">
-            CRM (0)
+        <a style="margin-bottom:5px" class="btn btn-primary collapsed title-history" data-toggle="collapse" href="#collapseInvoice" role="button" aria-expanded="false" aria-controls="collapseInvoice">
+            Đơn hàng <span id="invoiceCount">(0)</span>
         </a>
+        <div class="mt-2 collapse" id="collapseInvoice" style="">
+            <div class="table-responsive">
+                <table id="tblInvoices" class="table table-bordered">
+                    <thead class="thead-default">
+                        <tr>
+                            <th></th>
+                            <th>Trạng thái</th>
+                            <th>Mã cơ hội</th>
+                            <th>Khách hàng</th>
+                            <th>Nhu cầu</th>
+                            <th>Thông tin thêm</th>
+                            <th>Phụ trách</th>
+                            <th>Ngày liên hệ</th>
+                            <th>Ngày tạo</th>
+                        </tr>
+                    </thead>
+                </table>
+            </div>
+        </div>
         <br />
-        <a class="btn btn-primary collapsed title-history" data-toggle="collapse" href="#collapseExample" role="button" aria-expanded="false" aria-controls="collapseExample">
-            Công việc (0)
+        <a style="margin-bottom:5px" class="btn btn-primary collapsed title-history" data-toggle="collapse" href="#collapseCrm" role="button" aria-expanded="false" aria-controls="collapseCrm">
+            CRM <span id="crmCount">(0)</span>
         </a>
+        <div class="mt-2 collapse" id="collapseCrm" style="">
+            <div class="table-responsive">
+                <table id="tblCrms" class="table table-bordered">
+                    <thead class="thead-default">
+                        <tr>
+                            <th></th>
+                            <th>Trạng thái</th>
+                            <th>Mức độ khẩn cấp</th>
+                            <th>Mã cơ hội</th>
+                            <th>Khách hàng</th>
+                            <th>Nhu cầu</th>
+                            <th>Nguồn</th>
+                            <th>Phụ trách</th>
+                            <th>Ngày liên hệ</th>
+                            <th>Ngày tạo</th>
+                        </tr>
+                    </thead>
+                </table>
+            </div>
+        </div>
         <br />
-        <a class="btn btn-primary collapsed title-history" data-toggle="collapse" href="#collapseExample" role="button" aria-expanded="false" aria-controls="collapseExample">
-            Biên nhận (0)
+        <a style="margin-bottom:5px" class="btn btn-primary collapsed title-history" data-toggle="collapse" href="#collapseTask" role="button" aria-expanded="false" aria-controls="collapseTask">
+            Công việc <span id="taskCount">(0)</span>
         </a>
+        <div class="mt-2 collapse" id="collapseTask" style="">
+            <div class="table-responsive">
+                <table id="tblTasks" class="table table-bordered">
+                    <thead class="thead-default">
+                        <tr>
+                            <th></th>
+                            <th>Trạng thái</th>
+                            <th>Mức độ khẩn cấp</th>
+                            <th>Mã cơ hội</th>
+                            <th>Khách hàng</th>
+                            <th>Nhu cầu</th>
+                            <th>Nguồn</th>
+                            <th>Phụ trách</th>
+                            <th>Ngày liên hệ</th>
+                            <th>Ngày tạo</th>
+                        </tr>
+                    </thead>
+                </table>
+            </div>
+        </div>
         <br />
-        <a class="btn btn-primary collapsed title-history" data-toggle="collapse" href="#collapseExample" role="button" aria-expanded="false" aria-controls="collapseExample">
-            Bảo hành (0)
+        <a style="margin-bottom:5px" class="btn btn-primary collapsed title-history" data-toggle="collapse" href="#collapseReceipt" role="button" aria-expanded="false" aria-controls="collapseReceipt">
+            Biên nhận <span id="receiptCount">(0)</span>
         </a>
+        <div class="mt-2 collapse" id="collapseReceipt" style="">
+            <div class="table-responsive">
+                <table id="tblTasks" class="table table-bordered">
+                    <thead class="thead-default">
+                        <tr>
+                            <th></th>
+                            <th>Trạng thái</th>
+                            <th>Mức độ khẩn cấp</th>
+                            <th>Mã cơ hội</th>
+                            <th>Khách hàng</th>
+                            <th>Nhu cầu</th>
+                            <th>Nguồn</th>
+                            <th>Phụ trách</th>
+                            <th>Ngày liên hệ</th>
+                            <th>Ngày tạo</th>
+                        </tr>
+                    </thead>
+                </table>
+            </div>
+        </div>
         <br />
-        
+        <a style="margin-bottom:5px" class="btn btn-primary collapsed title-history" data-toggle="collapse" href="#collapseWarrant" role="button" aria-expanded="false" aria-controls="collapseWarrant">
+            Bảo hành <span id="warrantCount">(0)</span>
+        </a>
+        <div class="mt-2 collapse" id="collapseWarrant" style="">
+            <div class="table-responsive">
+                <table id="tblTasks" class="table table-bordered">
+                    <thead class="thead-default">
+                        <tr>
+                            <th></th>
+                            <th>Trạng thái</th>
+                            <th>Mức độ khẩn cấp</th>
+                            <th>Mã cơ hội</th>
+                            <th>Khách hàng</th>
+                            <th>Nhu cầu</th>
+                            <th>Nguồn</th>
+                            <th>Phụ trách</th>
+                            <th>Ngày liên hệ</th>
+                            <th>Ngày tạo</th>
+                        </tr>
+                    </thead>
+                </table>
+            </div>
+        </div>
     </div>
 </div>
 
