--- a/src/Pelo.Web/Views/Invoice/Index.cshtml
+++ b/src/Pelo.Web/Views/Invoice/Index.cshtml
@@ -22,7 +22,7 @@
         <div class="row panel-collapse collapse in" id="collapse1">
             <div class="col-md-6">
                 <div class="form-group">
-                    <input type="text" class="form-control" id="txtCustomerName" placeholder="Tên khách hàng">
+                    <input type="text" class="form-control" id="txtCustomerCode" placeholder="Mã khách hàng">
                     <i class="form-group__bar"></i>
                 </div>
             </div>
@@ -34,7 +34,7 @@
             </div>
             <div class="col-md-6">
                 <div class="form-group">
-                    <input type="text" class="form-control" id="txtCustomerCode" placeholder="Mã khách hàng">
+                    <input type="text" class="form-control" id="txtCustomerName" placeholder="Tên khách hàng">
                     <i class="form-group__bar"></i>
                 </div>
             </div>
@@ -105,7 +105,7 @@
                     <div class="col-md-6">
                         <div class="form-group">
                             <select class="form-control select2" id="txtUserSell">
-                                <option value="0">--Tất cả người lên đơn--</option>
+                                <option value="0">--Tất cả nhân viên bán hàng--</option>
                                 @{
                                     var userSells = ViewBag.UserCreateds as List<UserDisplaySimpleModel>;
                                     if (userSells != null)
@@ -146,6 +146,8 @@
                     <input type="hidden" id="txtUserDelivery" value="@ViewBag.UserId" />
                 }
             }
+            <div class="col-md-6"></div>
+            <div class="clearfix"></div>
             <div class="col-md-6">
                 <div class="form-group">
                     <div class="input-group">
@@ -181,7 +183,7 @@
 <div class="card">
     <div class="card-body">
         <div class="table-responsive">
-            <table id="tblInvoices2" class="table table-bordered">
+            <table id="tblInvoices" class="table table-bordered">
                 <thead class="thead-default">
                     <tr>
                         <th></th>
@@ -192,6 +194,8 @@
                         <th>Chi nhánh</th>
                         <th>Ngày giao</th>
                         <th>Ngày tạo</th>
+                        <th></th>
+                        <th></th>
                         <th></th>
                     </tr>
                 </thead>
