Fix bug not select menu bar when user access view invoice index

--- a/src/Pelo.Web/Views/Shared/_Menu.cshtml
+++ b/src/Pelo.Web/Views/Shared/_Menu.cshtml
@@ -111,19 +111,19 @@
                 <a href=""><i class="zmdi zmdi-assignment"></i> Đơn hàng</a>
 
                 <ul>
-                    <li>
+                    <li id="mnuInvoice">
                         <a href="@Url.Action("Index",
                                  "Invoice")">
                             Danh sách đơn hàng
                         </a>
                     </li>
-                    <li>
+                    <li id="mnuPayMethod">
                         <a href="@Url.Action("Index",
                                  "PaymentMethod")">
                             Hình thức thanh toán
                         </a>
                     </li>
-                    <li>
+                    <li id="mnuInvoiceStatus">
                         <a href="@Url.Action("Index",
                                  "InvoiceStatus")">
                             Trạng thái đơn hàng
